Project reworked