@@ -1,6 +1,7 @@
 package com.simplyfly.service;
 
 import com.simplyfly.dto.request.UpdateUserRequest;
+import com.simplyfly.dto.response.PageResponse;
 import com.simplyfly.dto.response.UserResponse;
 import com.simplyfly.enums.Role;
 import com.simplyfly.exception.ResourceNotFoundException;
@@ -8,15 +9,12 @@ import com.simplyfly.mapper.UserMapper;
 import com.simplyfly.model.User;
 import com.simplyfly.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.*;
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import com.simplyfly.dto.response.PageResponse;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 
 @Service
 @RequiredArgsConstructor
@@ -29,21 +27,21 @@ public class UserService{
         User user=userRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
+        checkSelfOrAdminOrOwner(user);
+
         return userMapper.mapToResponse(user);
     }
 
-    public PageResponse<UserResponse> getAllUsers(int page, int size) {
+    public PageResponse<UserResponse> getAllUsers(int page,int size){
+        checkAdminOrOwner();
 
-        Pageable pageable = PageRequest.of(
-                page, size,
-                Sort.by("fullName").ascending());
+        Pageable pageable=PageRequest.of(page,size,Sort.by("fullName").ascending());
+        Page<User> userPage=userRepository.findAll(pageable);
 
-        Page<User> userPage = userRepository.findAll(pageable);
-
-        List<UserResponse> content = userPage.getContent()
+        List<UserResponse> content=userPage.getContent()
                 .stream()
                 .map(userMapper::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageResponse<>(
                 content,
@@ -59,6 +57,8 @@ public class UserService{
         User user=userRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
+        checkSelfOrAdmin(user);
+
         user.setFullName(request.fullName());
         user.setPhone(request.phone());
 
@@ -66,6 +66,8 @@ public class UserService{
     }
 
     public void deleteUser(Long id){
+        checkAdmin();
+
         User user=userRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
@@ -74,6 +76,8 @@ public class UserService{
     }
 
     public List<UserResponse> getUsersByRole(Role role){
+        checkAdminOrOwner();
+
         return userRepository.findByRole(role)
                 .stream()
                 .map(userMapper::mapToResponse)
@@ -81,26 +85,24 @@ public class UserService{
     }
 
     public List<UserResponse> searchUsers(String keyword){
+        checkAdminOrOwner();
+
         return userRepository.searchByNameOrEmail(keyword)
                 .stream()
                 .map(userMapper::mapToResponse)
                 .toList();
     }
 
-    public PageResponse<UserResponse> getActiveUsers(
-            int page, int size) {
+    public PageResponse<UserResponse> getActiveUsers(int page,int size){
+        checkAdminOrOwner();
 
-        Pageable pageable = PageRequest.of(
-                page, size,
-                Sort.by("fullName").ascending());
+        Pageable pageable=PageRequest.of(page,size,Sort.by("fullName").ascending());
+        Page<User> userPage=userRepository.findByIsActiveTrue(pageable);
 
-        Page<User> userPage = userRepository
-                .findByIsActiveTrue(pageable);
-
-        List<UserResponse> content = userPage.getContent()
+        List<UserResponse> content=userPage.getContent()
                 .stream()
                 .map(userMapper::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageResponse<>(
                 content,
@@ -110,5 +112,52 @@ public class UserService{
                 userPage.getTotalPages(),
                 userPage.isLast()
         );
+    }
+
+    private void checkSelfOrAdminOrOwner(User user){
+        Authentication auth=SecurityContextHolder.getContext().getAuthentication();
+        String loggedEmail=auth.getName();
+
+        boolean isAdmin=hasAuthority(auth,"ADMIN");
+        boolean isOwner=hasAuthority(auth,"OWNER");
+        boolean isSelf=user.getEmail().equals(loggedEmail);
+
+        if(!isAdmin && !isOwner && !isSelf){
+            throw new AccessDeniedException("You can access only your own data");
+        }
+    }
+
+    private void checkSelfOrAdmin(User user){
+        Authentication auth=SecurityContextHolder.getContext().getAuthentication();
+        String loggedEmail=auth.getName();
+
+        boolean isAdmin=hasAuthority(auth,"ADMIN");
+        boolean isSelf=user.getEmail().equals(loggedEmail);
+
+        if(!isAdmin && !isSelf){
+            throw new AccessDeniedException("You can update only your own data");
+        }
+    }
+
+    private void checkAdminOrOwner(){
+        Authentication auth=SecurityContextHolder.getContext().getAuthentication();
+
+        if(!hasAuthority(auth,"ADMIN") && !hasAuthority(auth,"OWNER")){
+            throw new AccessDeniedException("Only admin or owner can access this data");
+        }
+    }
+
+    private void checkAdmin(){
+        Authentication auth=SecurityContextHolder.getContext().getAuthentication();
+
+        if(!hasAuthority(auth,"ADMIN")){
+            throw new AccessDeniedException("Only admin can perform this action");
+        }
+    }
+
+    private boolean hasAuthority(Authentication auth,String authority){
+        return auth.getAuthorities()
+                .stream()
+                .anyMatch(a -> a.getAuthority().equals(authority));
     }
 }
